# config

./: .colemak_vimrc  .vimrc  bashrc  boardsource_microdox_planck-alike.hex  cycleKitty.hs  init.vim  sp  xmonad.hs
.xmonad/: Setup.hs  Switch.hs  XmonadHelper.cabal  xmonad.hi  xmonad.hs
MeasureAndIntegral/: Measure and Integral.tex  Measure and Integral.toc  desktop.ini
RealWorldHaskell/: SimpleJSON.hs
RealWorldHaskell/Ch04/: FixLines.hi  FixLines.hs  InteractWith  InteractWith.hi  InteractWith.hs  SplitLines.hi  SplitLines.hs
RealWorldHaskell/Ch05/: Main  Main.hi  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hi  SimpleJSON.hs  SimpleResult.hs  mypretty.cabal  output.json
RealWorldHaskell/Ch06/: BrokenClass.hs  JSONClass.hs  eqclasses.hs  naiveeq.hs
RealWorldHaskell/Ch07/: actions.hs  actions2.hs  basicio.hs  callingpure.hs  filter.hs  notes.txt  readCommandLine.hs  tempfile.hs  toupper-imp.hs  toupper-lazy1.hs  toupper-lazy2.hs  toupper-lazy3.hs  toupper-lazy5.hs
RealWorldHaskell/Ch08/: ElfMagic.hs  Glob.hs  GlobRegex.hs  GlobRegexEither.hs  HighestClose.hs  SumFile.hs  notes.txt
RealWorldHaskell/Ch24/: Chan.hs  Compressor  Compressor.hi  Compressor.hs  Expensive.hs  FileToCompress.txt  MVarExample.hs  ModifyMVarStrict.hs  NiceFork.hs  notes.txt
RealWorldHaskell/Ch7/: input.txt  tempfile.hs  toupper-imp.hs  toupper-lazy2.hs  toupper-lazy3.hs
RealWorldHaskell/Ch9/: BetterPredicate.hs
boards/: boardsource_microdox_planck-alike.hex
cycle_kitty/: Cargo.toml
local_functions/: layout.sh
nvim/: init.vim
xmobar/: xmobarrc
(+5 files in other folders)
